--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -136,6 +136,7 @@ jobs:
 
     # 17. Windows Native IR (Final Fix: Correct 1-char vars)
         # 17. Windows Native IR (Final Fix: String Concatenation Trick)
+        # 17. Windows Native IR (Mock VM Crash Fix)
     - name: 17. Windows Native IR
       run: |
         cat <<EOF > win_ir_spec.py1
@@ -145,74 +146,73 @@ jobs:
         @v 字 'str'
         @v 結 '"\n".join'
 
-        # Opcodes (Avoid long strings)
-        @v 置 '"M"+"O"+"V"'
-        @v 取 '"L"+"E"+"A"'
-        @v 書 '"W"+"R"+"I"+"T"+"E"'
-        @v 零 '"J"+"Z"'
-        @v 飛 '"J"+"M"+"P"'
-        @v 比 '"C"+"M"+"P"'
-        @v 加 '"A"+"D"+"D"'
-        @v 連 '"L"+"O"+"A"+"D"'
-        @v 得 '"G"+"E"+"T"'
-        @v 呼 '"C"+"A"+"L"+"L"'
-        @v 押 '"P"+"U"+"S"+"H"'
-        @v 札 '"L"+"A"+"B"+"E"+"L"'
+        @v 置 '"MOV"'
+        @v 取 '"LEA"'
+        @v 書 '"WRITE_MEM"'
+        @v 零 '"JZ"'
+        @v 飛 '"JMP"'
+        @v 比 '"CMP"'
+        @v 加 '"ADD"'
+        @v 連 '"LOAD_DLL"'
+        @v 得 '"GET_PROC"'
+        @v 呼 '"CALL_API"'
+        @v 押 '"PUSH"'
+        @v 札 '"LABEL"'
 
         # Registers
-        @v 壱 '"R"+"B"+"X"'
-        @v 弐 '"R"+"1"+"2"'
-        @v 肆 '"R"+"1"+"3"'
-        @v 繰 '"R"+"C"+"X"'
-        @v タ '"R"+"D"+"X"'
-        @v 蜂 '"R"+"8"'
-        @v 苦 '"R"+"9"'
-        @v 蓄 '"R"+"A"+"X"'
+        @v 壱 '"RBX"'
+        @v 弐 '"R12"'
+        @v 肆 '"R13"'
+        @v 繰 '"RCX"'
+        @v タ '"RDX"'
+        @v 蜂 '"R8"'
+        @v 苦 '"R9"'
+        @v 蓄 '"RAX"'
 
         # Data
         @v コ 'codes'
-        @v 蔵 '"k"+"e"+"r"+"n"+"e"+"l"+"3"+"2"+"."+"d"+"l"+"l"'
-        @v 出 '"G"+"e"+"t"+"S"+"t"+"d"+"H"+"a"+"n"+"d"+"l"+"e"'
-        @v 記 '"W"+"r"+"i"+"t"+"e"+"F"+"i"+"l"+"e"'
-        @v 終 '"E"+"x"+"i"+"t"+"P"+"r"+"o"+"c"+"e"+"s"+"s"'
-        @v 陰 '"-"+"1"+"1"'
+        @v 蔵 '"kernel32.dll"'
+        @v 出 '"GetStdHandle"'
+        @v 記 '"WriteFile"'
+        @v 終 '"ExitProcess"'
+        @v 陰 '"-11"'
         @v 空 '" "'
 
         # Constants
         @v 一 '"1"'
-        @v 十 '"1"+"0"'
-        @v 限 '"1"+"7"'
+        @v 十 '"10"'
+        @v 限 '"17"'
         @v 二 '"2"'
         @v 三 '"3"'
 
         # Buffers
-        @v 壺 '"1"+"0"+"0"'
-        @v 泡 '"2"+"0"+"0"'
-        @v 鳴 '"3"+"0"+"0"'
-        @v 混 '"4"+"0"+"0"'
-        @v 桁 '"5"+"0"+"0"'
-        @v 針 '"6"+"0"+"0"'
+        @v 壺 '"100"'
+        @v 泡 '"200"'
+        @v 鳴 '"300"'
+        @v 混 '"400"'
+        @v 桁 '"500"'
+        @v 針 '"600"'
 
         # Values
         @v 穴 '"0"'
-        @v 改 '"1"+"0"'
-        @v 父 '"7"+"0"'
-        @v 愛 '"1"+"0"+"5"'
-        @v 寝 '"1"+"2"+"2"'
-        @v 豚 '"6"+"6"'
-        @v 鵜 '"1"+"1"+"7"'
-        @v 丸 '"4"+"8"'
-        @v 棒 '"4"+"9"'
-        @v 損 '"-"+"1"+"0"'
+        @v 改 '"10"'
+        @v 父 '"70"'
+        @v 愛 '"105"'
+        @v 寝 '"122"'
+        @v 豚 '"66"'
+        @v 鵜 '"117"'
+        @v 丸 '"48"'
+        @v 棒 '"49"'
+        @v 損 '"-10"'
 
         # Labels
-        @v 廻 '"L"+"O"+"O"+"P"'
-        @v 去 '"E"+"X"+"I"+"T"'
-        @v 甲 '"L"+"F"'
-        @v 乙 '"L"+"B"'
-        @v 丙 '"L"+"F"+"B"'
-        @v 丁 '"L"+"2"+"D"'
-        @v 次 '"N"+"X"'
+        @v 廻 '"LOOP"'
+        @v 去 '"EXIT"'
+        @v 甲 '"L_FIZZ"'
+        @v 乙 '"L_BUZZ"'
+        @v 丙 '"L_FB"'
+        @v 丁 '"L_2D"'
+        @v 次 '"NEXT"'
 
         $
 
@@ -228,21 +228,18 @@ jobs:
         コ.追(得 + 空 + 終)
 
         # --- Prepare Buffers ---
-        # Fizz (200)
         コ.追(書 + 空 + 泡 + 空 + 父)
         コ.追(書 + 空 + 字(201) + 空 + 愛)
         コ.追(書 + 空 + 字(202) + 空 + 寝)
         コ.追(書 + 空 + 字(203) + 空 + 寝)
         コ.追(書 + 空 + 字(204) + 空 + 改)
 
-        # Buzz (300)
         コ.追(書 + 空 + 鳴 + 空 + 豚)
         コ.追(書 + 空 + 字(301) + 空 + 鵜)
         コ.追(書 + 空 + 字(302) + 空 + 寝)
         コ.追(書 + 空 + 字(303) + 空 + 寝)
         コ.追(書 + 空 + 字(304) + 空 + 改)
 
-        # FizzBuzz (400)
         コ.追(書 + 空 + 混 + 空 + 父)
         コ.追(書 + 空 + 字(401) + 空 + 愛)
         コ.追(書 + 空 + 字(402) + 空 + 寝)
@@ -290,7 +287,7 @@ jobs:
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 甲)
 
-        # Check 2 digits (11, 13, 14, 16)
+        # Check 2 digits
         コ.追(置 + 空 + 弐 + 空 + 字(11))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 丁)
@@ -376,13 +373,12 @@ jobs:
         表(結(コ))
         EOF
 
-        # Generate IR
-        python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py || (cat win_ir_gen.py && exit 1)
+        python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py
         python win_ir_gen.py > fizzbuzz_win.ir
         
-        # --- 2. Mock VM (Concatenated Strings) ---
+        # --- 2. Mock VM (With robust .get() fallback) ---
         cat <<EOF > vm_win_mock.py1
-        # Mock VM with LEA support
+        # Mock VM with robust fallback
         @v 表 'print'
         @v 整 'int'
         @v 寸 'len'
@@ -410,29 +406,18 @@ jobs:
         @v 入 'in'
         @v 或 'elif'
 
-        @v 置 '"M"+"O"+"V"'
-        @v 取 '"L"+"E"+"A"'
-        @v 呼 '"C"+"A"+"L"+"L"'
-        @v 連 '"L"+"O"+"A"+"D"'
-        @v 得 '"G"+"E"+"T"'
-        @v 書 '"W"+"R"+"I"+"T"+"E"'
-        @v 札 '"L"+"A"+"B"+"E"+"L"'
-        @v 比 '"C"+"M"+"P"'
-        @v 零 '"J"+"Z"'
-        @v 飛 '"J"+"M"+"P"'
-        @v 加 '"A"+"D"+"D"'
-        @v 押 '"P"+"U"+"S"+"H"'
-
-        # Register Macros
-        @v 蓄 '"R"+"A"+"X"'
-        @v 壱 '"R"+"B"+"X"'
-        @v 繰 '"R"+"C"+"X"'
-        @v タ '"R"+"D"+"X"'
-        @v 蜂 '"R"+"8"'
-        @v 苦 '"R"+"9"'
-        @v 弐 '"R"+"1"+"2"'
-        @v 肆 '"R"+"1"+"3"'
-        @v 旗 '"Z"+"F"'
+        @v 置 '"MOV"'
+        @v 取 '"LEA"'
+        @v 呼 '"CALL_API"'
+        @v 連 '"LOAD_DLL"'
+        @v 得 '"GET_PROC"'
+        @v 書 '"WRITE_MEM"'
+        @v 札 '"LABEL"'
+        @v 比 '"CMP"'
+        @v 零 '"JZ"'
+        @v 飛 '"JMP"'
+        @v 加 '"ADD"'
+        @v 押 '"PUSH"'
 
         @v 外 'args'
         @v 径 'path'
@@ -464,26 +449,31 @@ jobs:
         @v 甲 'val_a'
         @v 乙 'val_b'
 
-        @v 核 '"k"+"e"+"r"+"n"+"e"+"l"'
-        @v ハ '"G"+"e"+"t"'
-        @v ラ '"W"+"r"+"i"+"t"+"e"'
-        @v 逝 '"E"+"x"+"i"+"t"'
-        @v 題 '"M"+"o"+"c"+"k"+":"'
+        @v 核 '"kernel32.dll"'
+        @v ハ '"GetStdHandle"'
+        @v ラ '"WriteFile"'
+        @v 逝 '"ExitProcess"'
+        @v 題 '"MockWin: "'
         @v 間 '" "'
         @v モ '"r"'
-        @v 権 '"u"+"t"+"f"+"8"'
+        @v 権 '"utf-8"'
         @v 号 'encoding'
+        @v 蓄 '"RAX"'
+        @v 繰 '"RCX"'
+        @v タ '"RDX"'
+        @v 蜂 '"R8"'
+        @v 旗 '"ZF"'
         @v 空 '""'
-        @v 説 '"U"+"s"+"a"+"g"+"e"'
+        @v 説 '"Usage"'
 
         $
 
         実(込)
 
         術 偽(名, レ, メ):
-         も 名.始(ハ):
+         も 名 == ハ:
           レ[蓄] = 1
-         或 名.始(ラ):
+         或 名 == ラ:
           基 = レ[タ]
           幅 = レ[蜂]
           器 = 空
@@ -494,12 +484,12 @@ jobs:
            カ = カ + 1
           表(題 + 器.削())
           レ[蓄] = 1
-         或 名.始(逝):
+         或 名 == 逝:
           系.終(0)
 
         術 動(コ):
-         # Init with concatenated string keys
-         レ = {蓄:0, 壱:0, 繰:0, タ:0, 蜂:0, 苦:0, 弐:0, 肆:0, 旗:0}
+         # Initialize regs
+         レ = {}
          メ = {}
          局 = {}
          指 = 0
@@ -531,10 +521,8 @@ jobs:
            も 元.数():
             レ[先] = 整(元)
            他:
-            も 元 入 レ:
-             レ[先] = レ[元]
-            他:
-             レ[先] = 整(元)
+            # Safe Fallback: get(src, 0) handles missing regs
+            レ[先] = レ.拾(元, 0)
 
           # LEA -> MOV
           或 技 == 取:
@@ -551,10 +539,10 @@ jobs:
            先 = 部[1]
            元 = 部[2]
            甲 = レ.拾(先, 0)
-           も 元 入 レ:
-            乙 = レ[元]
-           他:
+           も 元.数():
             乙 = 整(元)
+           他:
+            乙 = レ.拾(元, 0)
            も 甲 == 乙:
             レ[旗] = 1
            他:
@@ -575,7 +563,7 @@ jobs:
            も 元.数():
             乙 = 整(元)
            他:
-            乙 = レ[元]
+            乙 = レ.拾(元, 0)
            レ[先] = 甲 + 乙
           
           指 = 指 + 1
@@ -601,9 +589,9 @@ jobs:
         動(コ)
         EOF
         
-        # Run Mock
         python stage2_compiler.py vm_win_mock.py1 > vm_win_mock.py
         python vm_win_mock.py fizzbuzz_win.ir
+
 
 
     # 18. Phase 2: Setup NASM
