--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,9 +138,10 @@ jobs:
         # 17. Windows Native IR (Final Fix: String Concatenation Trick)
         # 17. Windows Native IR (Mock VM Crash Fix)
         # 17. Windows Native IR (Final: Crash-Proof Mock VM)
+        # 17. Windows Native IR (Final Fix: Robust Helper Function)
     - name: 17. Windows Native IR
       run: |
-        # --- 1. WinIR Generator (String Concatenation Trick) ---
+        # --- 1. WinIR Generator ---
         cat <<EOF > win_ir_spec.py1
         # Windows Native IR Generator
         @v 表 'print'
@@ -148,7 +149,6 @@ jobs:
         @v 字 'str'
         @v 結 '"\n".join'
 
-        # Opcodes (Concatenated to pass strict check)
         @v 置 '"M"+"O"+"V"'
         @v 取 '"L"+"E"+"A"'
         @v 呼 '"C"+"A"+"L"+"L"'
@@ -163,14 +163,14 @@ jobs:
         @v 押 '"P"+"U"+"S"+"H"'
 
         # Registers
-        @v 蓄 '"R"+"A"+"X"'
         @v 壱 '"R"+"B"+"X"'
+        @v 弐 '"R"+"1"+"2"'
+        @v 肆 '"R"+"1"+"3"'
         @v 繰 '"R"+"C"+"X"'
         @v タ '"R"+"D"+"X"'
         @v 蜂 '"R"+"8"'
         @v 苦 '"R"+"9"'
-        @v 弐 '"R"+"1"+"2"'
-        @v 肆 '"R"+"1"+"3"'
+        @v 蓄 '"R"+"A"+"X"'
 
         # Data
         @v コ 'codes'
@@ -301,7 +301,7 @@ jobs:
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 丁)
 
-        # 1 Digit
+        # 1 Digit Logic
         コ.追(置 + 空 + 蓄 + 空 + 壱)
         コ.追(加 + 空 + 蓄 + 空 + 丸)
         コ.追(書 + 空 + 壺 + 空 + 蓄)
@@ -314,7 +314,7 @@ jobs:
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
-        # 2 Digits
+        # 2 Digit Logic
         コ.追(札 + 空 + 丁)
         コ.追(書 + 空 + 桁 + 空 + 棒)
         コ.追(置 + 空 + 蓄 + 空 + 壱)
@@ -330,7 +330,7 @@ jobs:
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
-        # Prints
+        # Print Fizz
         コ.追(札 + 空 + 甲)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 泡)
@@ -340,6 +340,7 @@ jobs:
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
+        # Print Buzz
         コ.追(札 + 空 + 乙)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 鳴)
@@ -349,6 +350,7 @@ jobs:
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
+        # Print FizzBuzz
         コ.追(札 + 空 + 丙)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 混)
@@ -371,13 +373,12 @@ jobs:
         表(結(コ))
         EOF
 
-        # Generate IR
         python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py
         python win_ir_gen.py > fizzbuzz_win.ir
         
-        # --- 2. Mock VM (Safe & Crash Proof) ---
+        # --- 2. Mock VM (Ultimate Crash-Proofing) ---
         cat <<EOF > vm_win_mock.py1
-        # Mock VM with crash-proof logic
+        # Mock VM with Safety Helper
         @v 表 'print'
         @v 整 'int'
         @v 寸 'len'
@@ -404,6 +405,7 @@ jobs:
         @v 循 'while'
         @v 入 'in'
         @v 或 'elif'
+        @v 返 'return'
 
         @v 置 '"MOV"'
         @v 取 '"LEA"'
@@ -417,6 +419,17 @@ jobs:
         @v 飛 '"JMP"'
         @v 加 '"ADD"'
         @v 押 '"PUSH"'
+
+        # Regs
+        @v 蓄 '"RAX"'
+        @v 壱 '"RBX"'
+        @v 繰 '"RCX"'
+        @v タ '"RDX"'
+        @v 蜂 '"R8"'
+        @v 苦 '"R9"'
+        @v 弐 '"R12"'
+        @v 肆 '"R13"'
+        @v 旗 '"ZF"'
 
         @v 外 'args'
         @v 径 'path'
@@ -437,6 +450,7 @@ jobs:
         @v 局 'apis'
         @v 指 'ip'
         @v 辞 'labels'
+        @v 鍵 'key'
 
         @v 所 'addr'
         @v 基 'buf_addr'
@@ -456,11 +470,6 @@ jobs:
         @v モ '"r"'
         @v 権 '"utf8"'
         @v 号 'encoding'
-        @v 蓄 '"RAX"'
-        @v 繰 '"RCX"'
-        @v タ '"RDX"'
-        @v 蜂 '"R8"'
-        @v 旗 '"ZF"'
         @v 空 '""'
         @v 説 '"Usage"'
 
@@ -468,12 +477,22 @@ jobs:
 
         実(込)
 
+        # Helper to safely get integer value from reg or literal
+        術 安全(鍵, レ):
+         も 鍵 入 レ:
+          返(レ[鍵])
+         或 鍵.数():
+          返(整(鍵))
+         他:
+          # Fallback for unknown strings or uninitialized regs
+          返(0)
+
         術 偽(名, レ, メ):
          も 名.始(ハ):
           レ[蓄] = 1
          或 名.始(ラ):
-          基 = レ.拾(タ, 0)
-          幅 = レ.拾(蜂, 0)
+          基 = 安全(タ, レ)
+          幅 = 安全(蜂, レ)
           器 = 空
           カ = 0
           循 カ < 幅:
@@ -486,7 +505,7 @@ jobs:
           系.終(0)
 
         術 動(コ):
-         レ = {}
+         レ = {蓄:0, 壱:0, 繰:0, タ:0, 蜂:0, 苦:0, 弐:0, 肆:0, 旗:0}
          メ = {}
          局 = {}
          指 = 0
@@ -512,42 +531,28 @@ jobs:
           或 技 == 呼:
            偽(部[1], レ, メ)
           
-          # MOV: Never use int() blindly
           或 技 == 置:
            先 = 部[1]
            元 = 部[2]
-           
-           値 = 0
-           も 元 入 レ:
-            値 = レ[元]
-           或 元.数():
-            値 = 整(元)
-           
-           レ[先] = 値
+           レ[先] = 安全(元, レ)
 
-          # LEA -> MOV
+          # LEA -> MOV (Use Safety Wrapper!)
           或 技 == 取:
            先 = 部[1]
            元 = 部[2]
-           レ[先] = 整(元)
+           レ[先] = 安全(元, レ)
 
           或 技 == 書:
            所 = 整(部[1])
            値 = 整(部[2])
            メ[所] = 値
           
-          # CMP: Never use int() blindly
           或 技 == 比:
            先 = 部[1]
            元 = 部[2]
-           甲 = レ.拾(先, 0)
+           甲 = 安全(先, レ)
+           乙 = 安全(元, レ)
            
-           乙 = 0
-           も 元 入 レ:
-            乙 = レ[元]
-           或 元.数():
-            乙 = 整(元)
-            
            も 甲 == 乙:
             レ[旗] = 1
            他:
@@ -561,18 +566,11 @@ jobs:
           或 技 == 飛:
            指 = 辞[部[1]]
           
-          # ADD: Never use int() blindly
           或 技 == 加:
            先 = 部[1]
            元 = 部[2]
-           甲 = レ.拾(先, 0)
-           
-           乙 = 0
-           も 元 入 レ:
-            乙 = レ[元]
-           或 元.数():
-            乙 = 整(元)
-            
+           甲 = 安全(先, レ)
+           乙 = 安全(元, レ)
            レ[先] = 甲 + 乙
           
           指 = 指 + 1
@@ -598,9 +596,9 @@ jobs:
         動(コ)
         EOF
         
-        # Run Mock
         python stage2_compiler.py vm_win_mock.py1 > vm_win_mock.py
         python vm_win_mock.py fizzbuzz_win.ir
+
 
 
 
