--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -612,7 +612,7 @@ jobs:
     - name: 19. Check NASM
       run: nasm -v
 
-        # 19.5 Create compiler_x64.py1 (Fix: Map RAX to AL for byte writes)
+       # 19.5 Create compiler_x64.py1 (Fix: 1-char variables for RAX/AL)
     - name: 19.5 Create compiler_x64.py1
       run: |
         cat <<EOF > compiler_x64.py1
@@ -677,9 +677,9 @@ jobs:
         @v 処 '"[mem_base + "'
         @v 端 '"]"'
 
-        # Register mapping for byte operations
-        @v 大蓄 '"R"+"A"+"X"'
-        @v 小蓄 '"al"'
+        # Register mapping (1-char names!)
+        @v 大 '"R"+"A"+"X"'
+        @v 小 '"a"+"l"'
 
         @v 説 '"Usage: compiler_x64.py <win.ir>"'
         @v モ '"r"'
@@ -763,9 +763,9 @@ jobs:
          或 技 == 書:
           先 = 部[1]
           元 = 部[2]
-          # Fix: If writing RAX to byte memory, use al
-          も 元 == 大蓄:
-           元 = 小蓄
+          # Map RAX to AL for byte write
+          も 元 == 大:
+           元 = 小
           出 = 幕 + 転 + 基 + 先 + 閉 + 点 + 元
          
          或 技 == 押:
@@ -783,6 +783,7 @@ jobs:
 
         表(尾)
         EOF
+
 
 
 
